kotlin/semlang-parser/src/test/semlang/validatorTests/fail/follow2.sem
struct MyStruct {
  foo: Integer
  bar: Boolean
}

function myStuff.myFunction(input: MyStruct): Integer {
  input->somethingElse
}
